[package]
name = "chonky"
version = "0.1.0-SNAPSHOT"
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "A thicc message bus for Rust."
repository = "https://github.com/almibe/chonky/"

[dependencies]

[dev-dependencies]
bincode = "1"
serde = { version = "1", features = ["derive"] }
